kubernetes/projects/system/apps/pyroscope/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pyroscope
  namespace: cattle-monitoring-system
  labels:
    app.kubernetes.io/name: pyroscope
    app.kubernetes.io/component: profiling-backend
    app.kubernetes.io/part-of: rancher-monitoring
    home-lab.io/project-slug: system
spec:
  type: ClusterIP
  trafficDistribution: PreferSameNode
  selector:
    app.kubernetes.io/name: pyroscope
    app.kubernetes.io/component: profiling-backend
  ports:
    - name: http
      port: 4040
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 9095
      targetPort: grpc
      protocol: TCP
