kubernetes/projects/system/apps/pyroscope/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pyroscope-boundary
  namespace: cattle-monitoring-system
  labels:
    app.kubernetes.io/name: pyroscope
    app.kubernetes.io/component: profiling-backend
    app.kubernetes.io/part-of: rancher-monitoring
    home-lab.io/project-slug: system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pyroscope
      app.kubernetes.io/component: profiling-backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: 4040
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              prometheus: rancher-monitoring-prometheus
      ports:
        - protocol: TCP
          port: 4040
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shipyardhq
          podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - shipyardhq
              - key: app.kubernetes.io/component
                operator: In
                values:
                  - web
                  - worker
      ports:
        - protocol: TCP
          port: 4040
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: devfeed
          podSelector:
            matchLabels:
              devfeed-telemetry: 'true'
      ports:
        - protocol: TCP
          port: 4040
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
